# Automake Settings
# Copyright (C) 2007-2014 kaoru
# $Id$

extra_headers = \
    0namespace.h \
    about_dialog.h \
    application.h \
    command/0namespace.h \
    command/about.h \
    command/command_base.h \
    command/exit.h \
    command/file_property.h \
    command/font_color.h \
    command/horizontally_zoom_in.h \
    command/horizontally_zoom_out.h \
    command/load_from_file.h \
    command/new_file.h \
    command/nop.h \
    command/open_www_tetengo_org.h \
    command/save_to_file.h \
    command/set.h \
    command/set_horizontal_scale.h \
    command/set_vertical_scale.h \
    command/train_kind.h \
    command/vertically_zoom_in.h \
    command/vertically_zoom_out.h \
    config_traits.h \
    diagram_picture_box.h \
    diagram_view.h \
    file_property_dialog.h \
    font_color_dialog.h \
    load_save/0namespace.h \
    load_save/confirm_file_save.h \
    load_save/load_from_file.h \
    load_save/new_file.h \
    load_save/save_to_file.h \
    main_window.h \
    main_window_menu_builder.h \
    message/0namespace.h \
    message/about_dialog.h \
    message/diagram_picture_box.h \
    message/diagram_selection_observer_set.h \
    message/diagram_view.h \
    message/file_property_dialog.h \
    message/font_color_dialog.h \
    message/main_window.h \
    message/oudia_diagram_dialog.h \
    message/property_bar.h \
    message/timetable_model.h \
    message/timetable_model_observer_set.h \
    message/train_kind_dialog.h \
    message/type_list.h \
    message/type_list_impl.h \
    oudia_diagram_dialog.h \
    property_bar.h \
    settings.h \
    timetable_model.h \
    train_kind_dialog.h \
    view/0namespace.h \
    view/diagram/0namespace.h \
    view/diagram/header.h \
    view/diagram/item.h \
    view/diagram/selection.h \
    view/diagram/station_line.h \
    view/diagram/time_line.h \
    view/diagram/train_line.h \
    view/diagram/utility.h \
    view/diagram/zoom.h \
    view/scale_list.h

EXTRA_DIST = $(extra_headers)
