# Automake Settings
# Copyright (C) 2007-2014 kaoru
# $Id$

pkg_headers = \
    model/message/timetable_observer_set.h \
    model/serializer/bzip2_reader.h \
    model/serializer/bzip2_writer.h \
    model/serializer/json_reader.h \
    model/serializer/json_writer.h \
    model/serializer/oudia_reader.h \
    model/serializer/select_oudia_diagram.h \
    model/serializer/reader.h \
    model/serializer/reader_selector.h \
    model/serializer/reader_set.h \
    model/serializer/windia_reader.h \
    model/serializer/writer.h \
    model/serializer/writer_selector.h \
    model/serializer/writer_set.h \
    model/station.h \
    model/station_info/grade.h \
    model/timetable.h \
    model/timetable_info/font_color_set.h \
    model/timetable_info/station_interval_calculator.h \
    model/timetable_info/station_location.h \
    model/train.h \
    model/train_info/stop.h \
    model/train_info/time.h \
    model/train_info/time_span.h \
    model/train_kind.h

extra_headers = \
    model/0namespace.h \
    model/message/0namespace.h \
    model/serializer/0namespace.h \
    model/station_info/0namespace.h \
    model/timetable_info/0namespace.h \
    model/train_info/0namespace.h

nobase_pkginclude_HEADERS = $(pkg_headers)
EXTRA_DIST = $(extra_headers)
